# computer_graphics_submission

./: .gitignore  README.md  project_signup.tex
project_1/: Blender_setup.md  CMakeLists.txt  Notes.md  RenderAnimal.cpp  input.cpp  input.hpp  main.cpp  model.cpp  model.hpp  render.cpp  render.hpp  report.tex  task3_cubism_animal.cpp  task3_cubism_animal.cpp.orig
project_1/src/: CMakeLists.txt  input.cpp  main.cpp
project_2/: references.bib  report.tex  reportTwo.tex
project_2/src/: BVH.cpp  CMakeLists.txt  Material.hpp  Material_mukund.hpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Scene_-_Sam_with_bugs.cpp  Scene_Mukund.cpp  Triangle.hpp  global.hpp  main.cpp  outputs_log.csv
project_2/src/output_renders/: r_spp64_fov40_res1024x1024.ppm
